[package]
name = "dnutils"
authors = ["Veirt <vveirt@gmail.com>"]
description = "A collection of Dragon Nest development utilities."
license = "GPL-3.0"
version = "0.1.12"
edition = "2021"
exclude = ["/scripts"]

[dependencies]
dnpak = "2.1.2"
native-windows-gui = "1.0.12"
md-5 = "0.10.1"
# dnpak = { path = "../dnpak-rs"}
